# backup

./: .gitignore  LICENSE  README.md  greate-project.md
Xnix/: 70-fonts-noto-cjk.conf  Linux Beautify.md  Linux_bug_track.md  README.md  fonts_choose.md
Xnix/shell/: bashrc  inputrc  install_sun_java.sh  zshrc  zshrc_for_mac
Xnix/vim/: solarized.vim  syntastic_clang_check_config  vim_install.md  vimrc  vimrc_mac
git/: git-template  git.sh  gitignore-example
git-guide/: git-fetch.sh  git-hooks-commit-msg  git-template  gitconfig
icons/: README.md
linux-and-mac/shell/: zshrc
mirrors/: Android_SDK.md  Debian_china_sources.list  Ubuntu_China_sources.list  composer-mirrors.md  composer_mirrors.md  deepin.list  homebrew.md  hzwhuang-ubuntu-ss-qt5-artful.list  hzwhuang-ubuntu-ss-qt5-disco.list  install-ruby-by-rvm.sh  ruby_install_by_rvm.sh  source-list-debian-testing.list  source-list-debian.list  source-list-sublime-text.list  source-list-ubuntu-china.list  source-list-ubuntu-drivers.list  source_list_llvm.list  source_list_mint_17.list  taobao-npm.md  taonpm.md
mirrors/pip/: README.MD
script/: after-install-centos.sh  after-install-debian.sh  after-install-gnome-shell.sh  after-install-ubuntu.sh  after_install_debian.sh  after_install_ubuntu.sh  fotiaoqiang.sh  go-dev-build.sh  install-sun-java8.sh  python-dev.sh  shadowsocket-list.sh
scripts/: after-install-centos.sh  after-install-debian.sh  after-install-git.sh  after-install-oh-my-zsh.sh  build-python-dev.sh  build-qt-dev.sh  install-solarized-for-vim.sh  pylint.rc  swap-capslock-and-control
software/Mutate/: README.MD  config.ini
software/clang/: chromium-clang-format  clang-format  facebook-clang-format  google-clang-format  mozilla-clang-format  myself-clang-format
software/clion/: C File Header  CMakeLists.txt  MyCLionStyle.xml  clion.desktop  pycharm.desktop
software/cpplint/: CPPLINT.cfg
software/devhelp/: pygobjec-books.md
text/: regex.template
unix-like/: debian-hacks.md  linux-beautify.md  linux_bug_track.md
(+55 files in other folders)
